Done w/ initial resume page (HTML + CSS).

--- a/website_v2/_pages/contact.html
+++ b/website_v2/_pages/contact.html
@@ -9,7 +9,7 @@ jumbotron: jumbotron-contact
 
 <p>
 The best way to get in touch with me is through e-mail at
-<a href = "mailto:stephaniekyyip@gmail.com">stephaniekyyip@gmail.com</a>.
+<a href = "mailto:stephaniekyyip@gmail.com" target = "_blank">stephaniekyyip@gmail.com</a>.
 Alternatively, you can fill out the form below. I will get back to you as soon
 as possible.
 </p>
@@ -41,6 +41,6 @@ as possible.
     <input type="hidden" name="_subject" value = "E-mail from your website">
     <input type="hidden" name="_format" value="plain" />
     <input type="text" name="_gotcha" style="display:none" />
-    <!-- <input type="hidden" name="_next" value="contactSubmit.html" /> -->
+    <input type="hidden" name="_next" value="/contact/success" />
   </form>
 </div>
