--- a/website_v2/_pages/projects/bookTracker.html
+++ b/website_v2/_pages/projects/bookTracker.html
@@ -14,6 +14,15 @@ github: https://github.com/stephaniekyyip/bookTracker
   </figcaption>
 </figure>
 
+<figure>
+  <img src= "{{ site.url }}/assets/img/projects/bookTracker/bookTrackerAnalytics.png"
+  class = "proj-pg-img" alt = "Book Tracker Data Analytics"></img>
+  <figcaption class = "caption">
+    Data analytics page showing a bar chart of the total books I have read each
+    year since 2008.
+  </figcaption>
+</figure>
+
 <h1>Overview</h1>
 <p>
   <a href = "https://still-scrubland-90743.herokuapp.com/">Book Tracker</a>
