Updated projects pages.

--- a/website_v2/_pages/projects/bookTracker.html
+++ b/website_v2/_pages/projects/bookTracker.html
@@ -4,13 +4,15 @@ permalink: /projects/bookTracker
 layout: projects_page
 label: bookTracker
 github: https://github.com/stephaniekyyip/bookTracker
+demo: https://still-scrubland-90743.herokuapp.com/
 ---
 
 <figure>
-  <img src= "{{ site.url }}/assets/img/projects/bookTracker/bookTrackerHomepage.png"
+  <img src= "{{ site.url }}/assets/img/projects/bookTracker/bookTrackerHomeFull.png"
   class = "proj-pg-img" alt = "Book Tracker Homepage"></img>
   <figcaption class = "caption">
-    Home page of the app when user logs in.
+    <span class = "highlight">Home Page</span> <br>
+    Shows all the book entries the user has added with options to sort and search through their entries.
   </figcaption>
 </figure>
 
@@ -18,8 +20,8 @@ github: https://github.com/stephaniekyyip/bookTracker
   <img src= "{{ site.url }}/assets/img/projects/bookTracker/bookTrackerAnalytics.png"
   class = "proj-pg-img" alt = "Book Tracker Data Analytics"></img>
   <figcaption class = "caption">
-    Data analytics page showing a bar chart of the total books I have read each
-    year since 2008.
+    <span class = "highlight">Data Analytics Page</span> <br>
+    Displays different charts and statistics about the user's reading habits throughout the years.
   </figcaption>
 </figure>
 
