--- a/website_v2/index.html
+++ b/website_v2/index.html
@@ -29,7 +29,7 @@ jumbotron: jumbotron-home
 
   <p>
   That being said, I enjoy all things software and tech-related. For instance, I am currently
-  teaching myself full stack web development and am eagar to learn more!
+  teaching myself full stack web development and am eager to learn more!
   </p>
 
 </div>
