Minor text changes

--- a/website_v2/_pages/projects/rainGauge.html
+++ b/website_v2/_pages/projects/rainGauge.html
@@ -30,10 +30,10 @@ github: https://github.com/stephaniekyyip/electronicRainGauge
 
 <h1>Overview</h1>
 <p>
-  For my senior design project, I worked in an interdisciplinary team comprised
-  of both environmental science students and electrical and computer
+  For my senior design project, I worked in an interdisciplinary team that included
+  both environmental science students and electrical and computer
   engineering students, including myself. The project's sponsor,
-  <a href = "http://www.glacierpeakinstitute.org/">Glacier Peak Institute</a>
+  <a href = "http://www.glacierpeakinstitute.org/">Glacier Peak Institute</a>,
   tasked our team with creating an environmental sensor curriculum for middle
   school students in Darrington, WA.
 </p>
@@ -52,16 +52,16 @@ github: https://github.com/stephaniekyyip/electronicRainGauge
   to both the atmosphere and rainwater.
 </p>
 <p>
-  A second pressure sensor is used to measure the atmospheric pressure. Together,
+  A second pressure sensor is used to measure only the atmospheric pressure. Together,
   the two pressure sensors can find the differential pressure, as
   in the pressure due to only the rainwater. This differential pressure can be used
-  to find the depth of the rainwater contained in the PVC pipe.
+  to calculate the depth of the rainwater contained in the PVC pipe.
 </p>
 <p>
   The electronics are connected to an ESP8266 microcontroller that is programmed
   using the Arduino IDE. The code used for the rain gauge logs the differential
-  pressure reading and the current time measured by the real time clock (RTC) onto
-  a micro SD card every 15 minutes.
+  pressure reading and the current time measured by the real time clock onto
+  a micro-SD card every 15 minutes.
 </p>
 <p>
   The idea is that the rain gauge can be set
@@ -79,7 +79,7 @@ github: https://github.com/stephaniekyyip/electronicRainGauge
 </p>
 
 <p>
-  In addition to working on the hardware and software, I had a leadership role
-  in the project, in which I led team meetings and faciliated communication between
+  In addition to working on the hardware and software, I held a leadership role
+  in the project, in which I led team meetings and coordinated communication between
   our faculty advisors and project sponsor on behalf of our team.
 </p>
