--- a/website_v2/_pages/projects/bookTracker.html
+++ b/website_v2/_pages/projects/bookTracker.html
@@ -42,18 +42,15 @@ demo: https://still-scrubland-90743.herokuapp.com/
 
 <h1>How the App Works</h1>
 <p>
-  In the first version of the app, I used a tech stack consisting of Apache, PHP,
+  I used a tech stack consisting of Apache, PHP,
   and MySQL on the back end, and jQuery on the front end with C3.js/ D3.js
   for data visualization. The live version of the app is hosted on Heroku.
 </p>
 <p>
   Since this was my first web app, I chose to use technology I had used before,
-  including Apache and PHP. I decided not to use any web frameworks or libraries
-  such as React in order to understand the basics, though I eventually realized
-  why such technologies can be helpful.
+  including Apache and PHP. I decided not to use any web frameworks or libraries,
+  such as React or Laravel, in order to understand the basics, though I quickly understood
+  why such technologies can be helpful. Completing this project was a challenge 
+  that I enjoyed and learned a lot from.
 </p>
-<p>
-  Though I have created a working version of this book tracker app, I feel that
-  in a second version, I could leverage newer technologies and do better. I plan
-  to start working on version 2 of Book Tracker very soon.
-</p>
+
