--- a/website_v2/index.html
+++ b/website_v2/index.html
@@ -19,17 +19,18 @@ jumbotron: jumbotron-home
   <p>
   I graduated in 2017 with a B.S. in Computer Engineering from Seattle University.
   So far, my work experience has mainly been in the aerospace industry as a software engineer.
+  I am currently teaching myself full stack web development, and I am eagar to learn more!
   </p>
 
   <p>
   The area that fascinates me the most is the integration
   of hardware and software. I'm especially interested in projects that involve software
-  interacting with the physical world, such as in embedded devices and the internet of things.
+  interacting with the physical world, such as in embedded devices and the internet of things. 
   </p>
 
   <p>
-  That being said, I enjoy all things software and tech-related. For instance, I am currently
-  teaching myself full stack web development and am eager to learn more!
+  That being said, I enjoy all things software and tech-related. In the end, I am interested in
+  working on meaningful projects and software that do good in the world.
   </p>
 
 </div>
