More text changes. Final commit before adding photos.

--- a/website_v2/_pages/projects/bookTracker.html
+++ b/website_v2/_pages/projects/bookTracker.html
@@ -50,7 +50,7 @@ demo: https://still-scrubland-90743.herokuapp.com/
   Since this was my first web app, I chose to use technology I had used before,
   including Apache and PHP. I decided not to use any web frameworks or libraries,
   such as React or Laravel, in order to understand the basics, though I quickly understood
-  why such technologies can be helpful. Completing this project was a challenge 
-  that I enjoyed and learned a lot from.
+  why such technologies can be helpful. This project was a learning experience that
+  allowed me to dip my toes into web development.
 </p>
 
