Edited photography text + updated resume pdf

--- a/_pages/photography.html
+++ b/_pages/photography.html
@@ -8,12 +8,13 @@ jumbotron: jumbotron-photography
 <section class = "photo-intro">
   <h1>Snapshots From Seattle</h1>
   <p>
-    I have been an avid photographer since taking a high school photography class.
-    During college, I enjoyed wandering Seattle with
-    my camera in tow and taking pictures of whatever caught my eye. I fell
-    in love with the Pacific Northwest through photography.
+    I've been interested in photography since taking a high school photography class.
+    During college, I wandered Seattle with
+    my camera in tow and taking pictures of whatever caught my eye. I took over
+    8,000 photos in those four years. Here are a few from that collection.
   </p>
 </section>
+<!-- 8696 total photos -->
 
 <div class = "photo-container">
 
