Updated contact form + submit success page

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -24,7 +24,7 @@ as possible.
 
       <div class = "form-email">
         Your E-mail <br>
-        <input type = "email" name = "E-mail" required/>
+        <input type = "email" name = "_replyto" required/>
       </div>
 
       <div class = "form-msg">
@@ -44,3 +44,5 @@ as possible.
     <input type="hidden" name="_next" value="/contact/success" />
   </form>
 </div>
+
+<p id = "credit">Form powered by <a href = "https://formspree.io/">Formspree</a></p>
