--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ jumbotron: jumbotron-home
   </p>
 
   <p>
-  That being said, I enjoy all things software and tech-related. In the end, I am interested in
-  working on meaningful projects and software that do good in the world.
+  That being said, I enjoy all things software and tech-related. I am ultimately interested in
+  working on meaningful projects that do good in the world.
   </p>
 
 </div>
