Text edits, fixed resume pg sidebar in Firefox, updated resume pdf

--- a/_pages/photography.html
+++ b/_pages/photography.html
@@ -10,8 +10,8 @@ jumbotron: jumbotron-photography
   <p>
     I've been interested in photography since taking a high school photography class.
     During college, I wandered Seattle with
-    my camera in tow and taking pictures of whatever caught my eye. I took over
-    8,000 photos in those four years. Here are a few from that collection.
+    my camera in tow and taking pictures of whatever caught my eye. Over 8,000 photos
+    and four years later, here are some of my favorite shots.
   </p>
 </section>
 <!-- 8696 total photos -->
