--- a/_pages/projects/puppet.html
+++ b/_pages/projects/puppet.html
@@ -10,7 +10,7 @@ class = "proj-pg-img"></img>
 <div class = "caption">
   Puppet set-up with motors and chasis
   <br>
-  (Photo from Seattle University's
+  (Photo taken from Seattle University's
   <a href = "https://www.facebook.com/SeattleUECE/">ECE Department Facebook page)</a>
 </div>
 
