--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@ jumbotron: jumbotron-home
 
   <p>
   That being said, I enjoy all things software and tech-related. I am ultimately interested in
-  working on meaningful projects that do good in the world.
+  working on meaningful projects that do good in the world. Besides programming, I like photography,
+  wandering around parks, and reading fiction books.
   </p>
 
 </div>
