--- a/_pages/photography.html
+++ b/_pages/photography.html
@@ -8,9 +8,8 @@ jumbotron: jumbotron-photography
 <section class = "photo-intro">
   <h1>Snapshots From Seattle</h1>
   <p>
-    I've been interested in photography since taking a high school photography class.
-    During college, I wandered Seattle with
-    my camera in tow and taking pictures of whatever caught my eye. Over 8,000 photos
+    During college, I liked to wander Seattle with
+    my camera in tow and took pictures of whatever caught my eye. Over 8,000 photos
     and four years later, here are some of my favorite shots.
   </p>
 </section>
