--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ jumbotron: jumbotron-home
   <h1>Introduction</h1>
   <p>
   I graduated in 2017 with a B.S. in Computer Engineering from Seattle University.
-  So far, my work experience has mainly been in the aerospace industry as a software engineer.
-  I am currently teaching myself full stack web development, and I am eagar to learn more!
+  My work experience so far has mainly been in the aerospace industry as a software engineer.
+  Currently, I am teaching myself full stack web development.
   </p>
 
   <p>
@@ -30,7 +30,7 @@ jumbotron: jumbotron-home
 
   <p>
   That being said, I enjoy all things software and tech-related. I am ultimately interested in
-  working on meaningful projects that do good in the world. Besides programming, I like photography,
+  working on meaningful projects that have a positive impact on others. Besides programming, I like photography,
   wandering around parks, and reading fiction books.
   </p>
 
