Minor text + responsive changes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ jumbotron: jumbotron-home
 
   <p>
   That being said, I enjoy all things software and tech-related. I am ultimately interested in
-  working on meaningful projects that have a positive impact on others. Besides programming, I like photography,
+  working on meaningful projects that have a positive impact. Besides programming, I like photography,
   wandering around parks, and reading fiction books.
   </p>
 
