Initial design changes - Updated to single-page layout - Color changes (different blue) - Changed jumbotron text + added tagline - Various design changes (line under h1, no more box shadows) - Added nav bar background change upon scroll - Fixed jumbotron css for responsiveness - Updated mobile menu animation using css - Removed unnecessary files from previous version

--- a/index.html
+++ b/index.html
@@ -4,3 +4,7 @@ permalink: /
 layout: default
 ---
 
+{% include about.html %}
+{% include resume.html %}
+{% include projects.html %}
+{% include contact.html %}
