Added content to each section - Added dev.to link - Updated nav bar - Updated Font Awesome to v5.5 - Removed social links from footer - Cleaned up + removed unecessary CSS - Updated _config.yml + _config_dev.yml - Began updating the project pages

--- a/_pages/projects/smartLight.html
+++ b/_pages/projects/smartLight.html
@@ -1,68 +1,7 @@
 ---
-title: Smart Light System
+title: Smart Light
 permalink: /projects/smartLight
 layout: projects_page
 label: smartLight
 github: https://github.com/stephaniekyyip/smartLight
 ---
-
-<figure>
-  <img src= "{{ site.url }}/assets/img/projects/smartLight/smartLightSetup.jpg"
-  class = "proj-pg-img" alt = "Smart Light Set-up"></img>
-  <figcaption class = "caption">
-    <span class = "highlight">Smart light set-up.</span> <br>
-    Includes LED bulb in lamp, electronics and 12V battery
-    for the LED bulb contained in the box, and a portable charger
-    powering the Raspberry Pi.
-  </figcaption>
-</figure>
-
-<figure>
-  <img src= "{{ site.url }}/assets/img/projects/smartLight/smartLightElectronics.jpg"
-  class = "proj-pg-img" alt = "Smart Light Electronics"></img>
-  <figcaption class = "caption">
-    <span class = "highlight">Inside of the box containing the electronics.</span><br>
-    Includes the Raspberry Pi, 12V battery pack for the LED bulb, and photoresistor
-    and transistor circuits, respectively, on the breadboard.
-  </figcaption>
-</figure>
-
-<figure>
-  <img src= "{{ site.url }}/assets/img/projects/smartLight/smartLightGUI.png"
-  class = "proj-pg-img"></img>
-  <figcaption class = "caption">
-    Webpage that provides a user interface to control the LED bulb.
-  </figcaption>
-</figure>
-
-
-<h1>Overview</h1>
-<p>
-  For the final project in our Internet of Things course, my team decided to
-  create a smart light system to allow the user to remotely control a LED bulb.
-  The idea behind the smart light was to conserve energy by automatically
-  adjusting the brightness of the LED depending on the ambient light in the room.
-</p>
-
-<h1>Hardware</h1>
-<p>
-  We interfaced the LED bulb, as well as a photo-resistor and a transistor, with a Raspberry Pi.
-  The photo-resistor was used to determine the ambient brightness
-  in the room in order to adjust the brightness of the LED accordingly. The
-  transistor was used with the battery pack to vary the brightness
-  of the LED using the pulse width modulation (PWM) output from the Raspberry Pi.
-</p>
-
-<h1>Software</h1>
-<p>
-  To control the LED, I wrote Python scripts to adjust the LED brightness
-  by varying the PWM output. I also wrote a Python script to read the input from the photo-resistor
-  to allow the option of automatically adjusting the brightness of the LED according
-  to the ambient brightness.
-</p>
-
-<p>
-  In addition to using Python, I used PHP with the Apache server on the Raspberry
-  Pi to retrieve the user's input from the webpage and execute the appropriate Python
-  script.
-</p>
