Updated project pages + js files - Redesigned + edited text on project pages - Renamed .js files + concatenated all js files into one via Gulp - Updated 404 page design - Updated resume pdf - Added favicon - Redesigned projects section (changed location of details button) - Added smooth scrolling for the nav bar links + highlighting the title of the current section in the nav bar - Removed highlighting when user double-clicks on nav bar - Cleaned up sass files - Removed unnecessary files from previous version

--- a/404.html
+++ b/404.html
@@ -4,9 +4,9 @@ layout: no_jumbotron
 ---
 
 <div class = "large-centered">
-Page not found
+Page not found <i class="fas fa-exclamation-triangle"></i>
 </div>
 
 <div class = "reg-centered">
-Click <a href = "/">here</a> to return to the home page.
+Click <a href = "/">here</a> to return to the home page
 </div>
