--- a/_pages/projects/puppet.html
+++ b/_pages/projects/puppet.html
@@ -4,3 +4,53 @@ permalink: /projects/puppet
 layout: projects_page
 label: puppet
 ---
+<figure>
+  <img src = "{{ site.url }}/assets/img/projects/puppet/PuppetProjectPuppet.jpg"
+  class = "proj-pg-img" alt = "puppet set-up"></img>
+  <figcaption class = "caption">
+    <span class = "highlight">Puppet set-up with motors and chasis</span>
+    <br>
+    (Photo taken from Seattle University's
+    <a href = "https://www.facebook.com/SeattleUECE/">ECE Department Facebook page)</a>
+  </figcaption>
+</figure>
+
+<figure>
+  <video controls width=100%
+    name="Puppet Demo" src="{{ site.url }}/assets/img/projects/puppet/puppetDemo.mov"
+    class = "proj-pg-img" type = "video/mov" >
+  </video>
+
+  <figcaption class = "caption">
+      <span class = "highlight">Video demostrating the puppet's movements</span>
+  </figcaption>
+</figure>
+
+<h1>Overview</h1>
+<p>
+  As a part of my junior year electrical and computer engineering labs,
+  I worked with a lab partner to implement a marionette puppet that performed
+  a dance routine on command.
+</p>
+
+<h1>How the Puppet Worked</h1>
+<p>
+  The puppet's movements were controlled by circuits and programmed in C on a
+  Raspberry Pi. A motor with a connected optical encoder allowed us to control
+  of the puppet's limbs, which included moving each limb up and down by a selected amount.
+</p>
+
+<h1>What We Did</h1>
+<p>
+  Though the lab instructors had designed both the hardware and software, my
+  lab partner and I were responsible for the construction, testing, and
+  troubleshooting of the puppet. We had to read schematics, build and test the
+  circuits, solder a printed circuit board (PCB), modify code to control the puppet's movements, and
+  integrate the hardware and software.
+</p>
+
+<p>
+  I focused mainly on the software side of the project and worked together with
+  my partner on other areas on the projects, including the troubleshooting
+  and testing aspects.
+</p>
